--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second repo</title>
 </head>
 <body>
-    
+    <h1>i can push to git hub</h1>
+    <h3>now i can build web sites</h3>
+    <h4>new codes to changed orange</h4> 
+    <p>this is my paragraph</p>
+    <h4>coding coding and coding</h4>
+    <img src="pine.jpeg" alt="my garden pineapple">
+    <img src="polo.jpeg" alt="this is my image">
 </body>
 </html>
